--- a/locales/en_CA.yml
+++ b/locales/en_CA.yml
@@ -303,3 +303,9 @@ command:
     points: points
     friends: friends~$add/remove~$player
     optimize: optimize
+    drop: drop~$zombie/giant/pigman/guard
+  drop:
+    must_be_holding: '&4You must be holding an item to add to the drop table.'
+    needs_mob: '&4You must specify a mob. &eOptions: &rzombie, guard, pigman, giant&e.'
+    finished: '&eThe item in your hand has been added to the drop table for $0s.'
+back: Back
