--- a/locales/en_CA.yml
+++ b/locales/en_CA.yml
@@ -343,7 +343,12 @@ follower:
   wolf:
     gain_exp: '&a+$0 XP'
     tamed: '&eYou tamed your wolf, &r$0&r&e!'
+    died: '&4Your wolf was killed.'
+    levelup: '&aYour wolf is now level &e$0&a!'
+    lose_exp: '&4-$0 XP'
   horse:
     gain_exp: '&a+$0 XP'
     died: '&4Your wolf was killed.'
     tamed: '&eYou tamed your horse, &r$0&r&e!'
+    levelup: '&aYour horse is now level &e$0&a!'
+    lose_exp: '&4-$0 XP'
