--- a/locales/en_CA.yml
+++ b/locales/en_CA.yml
@@ -262,6 +262,8 @@ command:
     temperature: temperature
     achievements: achievements~$all/owned/unowned~$integer
     xp: level
+    config_file: config~$config~$unknown
+    guide: guide
   drop:
     must_be_holding: '&4You must be holding an item to add to the drop table.'
     needs_mob: '&4You must specify a mob. &eOptions: &rzombie, guard, pigman, giant&e.'
